paragraph of HTML/CSS plus design changes

--- a/work.html
+++ b/work.html
@@ -8,9 +8,9 @@
     <link rel=stylesheet href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
-     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-                <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
     <script src="javas.js"></script>
 
 
@@ -19,25 +19,24 @@
 <body>
     <!-- Naviagtion Menu -->
     <header>
-                    <nav class="blue nav-wrapper">
-                <div>
-                    <ul id="slide-out" class="side-nav blue text-header text-white">
-                        <li><a href="#!"><span class="white-text">About Me</span><i class="material-icons md-24" style="float:right; color:white;">account_circle</i></a></li>
-                        <li><a href="education.html"><span class="white-text">Education</span><i class="material-icons md-24" style="float:right; color:white;">school</i></a></li>
-                        <li><a href="work.html"><span class="white-text">Work Experience</span><i class="material-icons md-24" style="float:right; color:white;">work</i></a></li>
-                        <li><a href="#!"><span class="white-text">My Projects</span><i class="material-icons md-24" style="float:right; color:white;">memory</i></a></li>
-                        <li><a href="other_resources/MichaelSila_Resume_July2016.pdf" download><span class="white-text  ">Download Resume</span><i class="material-icons md-24" style="float:right; color:white;">get_app</i></a></li>
-                        <li><a href="https://github.com/MichaelSila"><span class="white-text">GitHub</span><i class="devicon-github-plain colored" style="float:right; color:white;"></i></a></li>
-                        <li><a href="https://www.linkedin.com/in/michaelarassilacs"><span class="white-text">Linkedin</span><i class="material-icons md-24" style="float:right; color:white;">link</i></a></li>
+        <nav class="blue nav-wrapper">
+            <div>
+                <ul id="slide-out" class="side-nav blue text-header text-white">
+                    <li><a href="index.html"><span class="white-text">About Me</span><i class="material-icons md-24" style="float:right; color:white;">account_circle</i></a></li>
+                    <li><a href="education.html"><span class="white-text">Education</span><i class="material-icons md-24" style="float:right; color:white;">school</i></a></li>
+                    <li><a href="work.html"><span class="white-text">Work Experience</span><i class="material-icons md-24" style="float:right; color:white;">work</i></a></li>
+                    <li><a href="other_resources/MichaelSila_Resume_July2016.pdf" download><span class="white-text  ">Download Resume</span><i class="material-icons md-24" style="float:right; color:white;">get_app</i></a></li>
+                    <li><a href="https://github.com/MichaelSila"><span class="white-text">GitHub</span><i class="devicon-github-plain colored" style="float:right; color:white;"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/michaelarassilacs"><span class="white-text">Linkedin</span><i class="material-icons md-24" style="float:right; color:white;">link</i></a></li>
 
-                    </ul>
-                    <a href="#" data-activates="slide-out" class="button-collapse show-on-large blue"><i class="material-icons">menu</i></a>
-                </div>
-                <div class="header right text-header">
-                    <a href="index.html">Michael Sila  </a>
-                </div>
+                </ul>
+                <a href="#" data-activates="slide-out" class="button-collapse show-on-large blue"><i class="material-icons">menu</i></a>
+            </div>
+            <div class="header right text-header">
+                <a href="index.html">Michael Sila  </a>
+            </div>
 
-            </nav>
+        </nav>
     </header>
     <main>
         <div class="page-body">
@@ -58,7 +57,7 @@
                             Internally, Clearwater puts great emphasis on staying at the forefront of web technologies. An agile development process
                             is used with weekly training seminars during lunch to ensure developer’s skills stay sharp. While
                             the exact technologies used vary by team, popular frameworks include: Java 8, Jersey 1 & 2, Microsoft
-                            SQL Server, Angular JS 1 & 2, JQuery, MongoDB, and a plethora of other technologies.
+                            SQL Server, Angular JS 1 and 2, JQuery, MongoDB, and a plethora of other technologies.
                         </p>
                         <p>
                             I am starting work at Clearwater full time with the title of <b>Software Engineer</b> on July
@@ -124,25 +123,49 @@
                         <li>
                             <div class="collapsible-header"><i class="devicon-java-plain"></i>Java </div>
                             <div class="collapsible-body">
-                                <p>My experience in it can be divided into two categories:  academic, and professional. Academically, Java has a special place in my heart. Not only was Java the 1st language I learned on, but I also programmed the majority of projects during my university days in Java.
+                                <p>My experience in it can be divided into two categories: academic, and professional. Academically,
+                                    Java has a special place in my heart. Not only was Java the 1st language I learned on,
+                                    but I also programmed the majority of projects during my university days in Java.
                                 </p>
-                                <p>Professionally, I am less tied to sentimental feelings. However, my company does use Java 8 EE for the vast majority its backend code. This has given me experience in Java well beyond what I could have learned in university classrooms. Some libraries in use are guice dependency injection, the jesery2 framework, and various custom internal libraries. Learning these, these along with design patterns and business logic, is continually improving my skills in Java. 
+                                <p>Professionally, I am less tied to sentimental feelings. However, my company does use Java
+                                    8 EE for the vast majority its backend code. This has given me experience in Java well
+                                    beyond what I could have learned in university classrooms. Some libraries in use are
+                                    guice dependency injection, the jesery2 framework, and various custom internal libraries.
+                                    Learning these, these along with design patterns and business logic, is continually improving
+                                    my skills in Java.
                                 </p>
                             </div>
                         </li>
                         <li>
                             <div class="collapsible-header"><i class="devicon-javascript-plain"></i>javascript</div>
                             <div class="collapsible-body">
-                                <p>	I learned the vast majority of my javascript knowledge upon beginning my employment at Clearwater Analytics. My work tends to use a menagerie of javascript frameworks to create the UI of both client-facing applications and internal tools. At my time at Clearwater, I have worked in Angular1,Jquery, along with the tiniest bit of Node.js. </p>
-                                <p>Javascript is an...interesting language. I don’t feel outspoken nor afraid when saying there are many things wrong with the platform. In many ways, I find it oddly similar to C++ in that it has completely overgrown its original purpose and can cause serious issues if used incorrectly. That being said, there can be no denying Javascript’s reach and impact on the software development world. </p>
+                                <p> I learned the vast majority of my javascript knowledge upon beginning my employment at Clearwater
+                                    Analytics. My work tends to use a menagerie of javascript frameworks to create the UI
+                                    of both client-facing applications and internal tools. At my time at Clearwater, I have
+                                    worked in Angular1,Jquery, along with the tiniest bit of Node.js. </p>
+                                <p>Javascript is an...interesting language. I don’t feel outspoken nor afraid when saying there
+                                    are many things wrong with the platform. In many ways, I find it oddly similar to C++
+                                    in that it has completely overgrown its original purpose and can cause serious issues
+                                    if used incorrectly. That being said, there can be no denying Javascript’s reach and
+                                    impact on the software development world. </p>
                             </div>
                         </li>
                         <li>
                             <div class="collapsible-header"><i class="devicon-python-plain"></i>Python</div>
                             <div class="collapsible-body">
-                                <p>	Unlike much of my knowledge, my primary vehicle of experience and knowledge of python is through personal projects.  While I will occasionally code in Java in my spare time, out of either familiarity or a perceived shortcoming in a specific area not covered by my job, python is my language of choice outside of work. This is mainly because python allows development of an application quickly, without much of the boilerplate that defines other languages.</p>
+                                <p> Unlike much of my knowledge, my primary vehicle of experience and knowledge of python is
+                                    through personal projects. While I will occasionally code in Java in my spare time, out
+                                    of either familiarity or a perceived shortcoming in a specific area not covered by my
+                                    job, python is my language of choice outside of work. This is mainly because python allows
+                                    development of an application quickly, without much of the boilerplate that defines other
+                                    languages.
+                                </p>
                                 <p>
-                                    While most of my experience of python comes from a hobbyist's perspective, I would recommend it in many scenarios. Python not be as extensible, performant, or easy to develop on an enterprise level, as Java. However, there are many projects and companies that are looking for quick deployment without much of the baggage other languages carry. Python is an amazing language, so long as it’s not shoehorned into situations where it doesn’t belong.
+                                    While most of my experience of python comes from a hobbyist's perspective, I would recommend it in many scenarios. Python
+                                    not be as extensible, performant, or easy to develop on an enterprise level, as Java.
+                                    However, there are many projects and companies that are looking for quick deployment
+                                    without much of the baggage other languages carry. Python is an amazing language, so
+                                    long as it’s not shoehorned into situations where it doesn’t belong.
                                 </p>
                             </div>
                         </li>
@@ -150,11 +173,21 @@
                             <li>
                                 <div class="collapsible-header"><i class="devicon-html5-plain"></i>html/css</div>
                                 <div class="collapsible-body">
-                                    <p>Lorem ipsum dolor sit amet.</p>
+                                    <p> While I am neither a web designer nor web admin, I still understand the importance of
+                                        basic HTML and CSS knowledge. My work makes it easy; we mostly make use of bootstrap
+                                        on non-client facing applications so that teams can spend less time fiddling with
+                                        aesthetics and more time programming. HTML is mostly done in the perspective of integration
+                                        with javascript. </p>
+                                    <p>
+                                        However, my desire to learn more about HTML and CSS drove me to create this website. I felt that learning these items through
+                                        action would facilitate my understanding and improve my skills as a developer. While
+                                        graphic design is not my forte, I was pleased how different CSS libraries allowed
+                                        me to write a fairly attractive website without too many difficulties.
+                                    </p>
                                 </div>
                             </li>
                             <li>
-                                <div class="collapsible-header"><i class="material-icons">snooze</i>RESTful Enpoints</div>
+                                <div class="collapsible-header"><i class="material-icons">snooze</i>RESTful Endpoints</div>
                                 <div class="collapsible-body">
                                     <p>Lorem ipsum dolor sit amet.</p>
                                 </div>
@@ -205,10 +238,8 @@
                 <div class="col l4 offset-12 s12">
                     <h5 class="white-text">External Links</h5>
                     <ul>
-                        <li class="white-text">Linkedin</li>
-                        <li class="white-text">Gitlab</li>
-                        <li class="white-text">Github</li>
-                        <li class="white-text">Personal Blog</li>
+                        <script src="https://platform.linkedin.com/in.js" type="text/javascript"></script>
+                        <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/michaelarassilacs" data-format="inline" data-related="false"></script>
 
                     </ul>
                 </div>
