Added restFUL endpoints paragraph

--- a/work.html
+++ b/work.html
@@ -189,7 +189,20 @@
                             <li>
                                 <div class="collapsible-header"><i class="material-icons">snooze</i>RESTful Endpoints</div>
                                 <div class="collapsible-body">
-                                    <p>Lorem ipsum dolor sit amet.</p>
+                                    <p> My job makes extensive use of restFUL endpoints to accomplish a large majority of our
+                                        goals. The usage can be divided into two different categories: Interactions with
+                                        UI, and interactions with other services. The vast majority of our user interfaces
+                                        are web clients that interact with exposed endpoints utilizing RESTful architecture.
+                                        The second use case is interaction between projects maintained by different teams.
+                                        Both cases make use of Jersey1 or Jersey2 frameworks to create and expose their endpoints.</p>
+                                    <p>
+                                        While RESTful endpoints is a programming paradigm rather than a language, I feel that it is extremely important in modern
+                                        software development. Simply put, most user/computer interactions happen from the
+                                        browser. RESTful endpoints are an excellent way of using traditional languages without
+                                        having to worry about language-specific UI quirks. It can also serve up information
+                                        fairly fast in an easily consumable format. While they are not an end-all, RESTful
+                                        endpoints are an extremely important part of my toolset.
+                                    </p>
                                 </div>
                             </li>
                             <li>
