added testing frameworks desc

--- a/work.html
+++ b/work.html
@@ -206,9 +206,10 @@
                                 </div>
                             </li>
                             <li>
-                                <div class="collapsible-header"><i class="material-icons">dvr</i>Testing Framkeworks</div>
+                                <div class="collapsible-header"><i class="material-icons">dvr</i>Testing Frameworks</div>
                                 <div class="collapsible-body">
-                                    <p>Lorem ipsum dolor sit amet.</p>
+                                    <p>	A portion of my role at Clearwater is integrating testing frameworks into our stack, as well as ensuring existing testing frameworks and methodologies are being executed in an optimal manner. Proper testing not only allows The QA team to do their job more efficiently, but also promotes better code, especially in the longer term. </p>
+                                    <p>As clearwater uses Java and Javascript for the majority of their frontend and backend, a majority of our tests are some sort of unit test. These are written in the jasmine or javascript framework. It is the responsibility of every developer to write efficient tests of their code. In addition, there are a number of both integration tests and muti-platform frameworks that clearwater takes advantage of. Notable ones are the Pact and Rest Assured framework. Proper testing, while a bit dull, allows us to develop properly and, ultimately, more efficiently. </p>
                                 </div>
                             </li>
                             <li>
