--- a/index.html
+++ b/index.html
@@ -7,45 +7,52 @@
     <link rel=stylesheet href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
     <script src="javas.js"></script>
 
 </head>
 
 <body>
-        <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
-       <!-- Naviagtion Menu -->
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+    <!-- Naviagtion Menu -->
     <header>
-                    <nav class="blue nav-wrapper">
-                <div>
-                    <ul id="slide-out" class="side-nav blue text-header text-white">
-                        <li><a href="index.html"><span class="white-text">About Me</span><i class="material-icons md-24" style="float:right; color:white;">account_circle</i></a></li>
-                        <li><a href="education.html"><span class="white-text">Education</span><i class="material-icons md-24" style="float:right; color:white;">school</i></a></li>
-                        <li><a href="work.html"><span class="white-text">Work Experience</span><i class="material-icons md-24" style="float:right; color:white;">work</i></a></li>
-                        <li><a href="other_resources/MichaelSila_Resume.pdf" download><span class="white-text  ">Download Resume</span><i class="material-icons md-24" style="float:right; color:white;">get_app</i></a></li>
-                        <li><a href="https://github.com/MichaelSila"><span class="white-text">GitHub</span><i class="devicon-github-plain colored" style="float:right; color:white;"></i></a></li>
-                        <li><a href="https://www.linkedin.com/in/michaelarassilacs"><span class="white-text">Linkedin</span><i class="material-icons md-24" style="float:right; color:white;">link</i></a></li>
+        <nav class="blue nav-wrapper">
+            <div>
+                <ul id="slide-out" class="side-nav blue text-header text-white">
+                    <li><a href="index.html"><span class="white-text">About Me</span><i class="material-icons md-24" style="float:right; color:white;">account_circle</i></a></li>
+                    <li><a href="education.html"><span class="white-text">Education</span><i class="material-icons md-24" style="float:right; color:white;">school</i></a></li>
+                    <li><a href="work.html"><span class="white-text">Work Experience</span><i class="material-icons md-24" style="float:right; color:white;">work</i></a></li>
+                    <li><a href="other_resources/MichaelSila_Resume.pdf" download><span class="white-text  ">Download Resume</span><i class="material-icons md-24" style="float:right; color:white;">get_app</i></a></li>
+                    <li><a href="https://github.com/MichaelSila"><span class="white-text">GitHub</span><i class="devicon-github-plain colored" style="float:right; color:white;"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/michaelarassilacs"><span class="white-text">Linkedin</span><i class="material-icons md-24" style="float:right; color:white;">link</i></a></li>
 
-                    </ul>
-                    <a href="#" data-activates="slide-out" class="button-collapse show-on-large blue"><i class="material-icons">menu</i></a>
-                </div>
-                <div class="header right text-header">
-                    <a href="index.html">Michael Sila  </a>
-                </div>
+                </ul>
+                <a href="#" data-activates="slide-out" class="button-collapse show-on-large blue"><i class="material-icons">menu</i></a>
+            </div>
+            <div class="header right text-header">
+                <a href="index.html">Michael Sila  </a>
+            </div>
 
-            </nav>
+        </nav>
     </header>
     <main>
-
+        <div class="index-body">
+            <img src="https://static.pexels.com/photos/213117/pexels-photo-213117.jpeg" class="circle responsive-img">
+            <div class="index-text">
+                <p>I am currently a Software Engineer for Clearwater Analytics in Boise, Idaho. I work on the Integration and Productivity team developing and maintaining internal tools used to facilitate production. </p>
+                <p>I also work on various projects in my spare time, which are available on my GitHub. These projects are primarily used as a vehicle to expand my knowledge and supplement my experience at Clearwater.</p>
+                <p>In that vein, I am always looking for new projects and opportunities to help grow my development skills, or otherwise interesting and fufilling things to work on. Feel free to message me if you have an idea for volunteer position, side
+                    project, or opportunity in that regard, so long as you are okay with me politely declining if I end up not being interested.</p>
+            </div>
+        </div>
     </main>
     <footer class="page-footer blue">
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
                     <h5 class="white-text">Contact Me</h5>
-                    <p class="white-text">If you are an employer, recruiter, developer, or wish to discuss any employment related information with
-                        me, please email me at
+                    <p class="white-text">If you are an employer, recruiter, developer, or wish to discuss any employment related information with me, please email me at
                         <a href="mailto:michael.sila.career@outlook.com" target="_top">
                             <u class="purple-text text-lighten-4">michael.sila.career@outlook.com</u>
                         </a>. If you wish to contact me for any other reason, please email me at
