added icons and titles

--- a/education.html
+++ b/education.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <title>Education - Michael Sila</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css" media="screen,projection">
@@ -9,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Shuffle/4.0.0/shuffle.js"></script>
+    <link rel="icon" href="images/page-icons/ic_school_black_24dp_1x.png">
 
 
 </head>
@@ -77,7 +79,7 @@
                                 I transferred to ISU in the fall of 2014. I the foremost reason I chose ISU was the academic rigor. Iowa State has an excellent computer science program; At ISU, I felt I would be challenged and gain knowledge to help me become a fully-fledged developer.
                                 This prediction has turned out to be largely correct. Classes like C/C++ Development and Databases have taught me concepts instrumental to both computer science and software development. Furthermore, the large size of ISU
                                 allows for ample opportunity through extracurricular activities. Groups like Computer Science and Engineering Club and events like HackISU have helped me grow in ways I could not have achieved by academics alone. This is
-                                all without mentioning ISU’s excellent career services, which have allowed me to gain internships and, by extension, real-world experience. I graduated Iowa State in May of 2017 with Cum Laude distinction.
+                                all without mentioning ISU’s excellent career services, which have allowed me to gain internships and my first job out of college. I graduated Iowa State in May of 2017 with Cum Laude distinction.
 
                             </p>
                         </div>
@@ -182,7 +184,8 @@
                             <div class="card-content">
                                 <span class="card-title">KURE (ISU Alt. Radio)</span>
                                 <p>88.9 FM: KURE is Iowa State's very own alternative music radio station. In 2014, I served on the music review committee. Our job was to review albums both purchased and sent into KURE, ensure they meet FCC standards, and
-                                    assign them a subjective quality score. While this club allowed me to explore my love of music, I decided to pursue other hobbies the following year. </p>
+                                    assign them a subjective quality score. Membership in this club also came with access to the club box account. The account was filled with new music to review. The end result was that I ended up broadening my musical
+                                    pallet quite a bit. </p>
                             </div>
                             <div class="card-action">
                                 <a href="http://www.kure.stuorg.iastate.edu/"><span class="purple-text lighten-4">Club Website</span></a>
@@ -195,8 +198,8 @@
                             <div class="card-content">
                                 <span class="card-title">PrISUm (Solar Car)</span>
                                 <p>PrISUm is Iowa State's very own championship-winning Solar Car team. During 2014 and 2015, I was a member of the IT group. The IT group's reponsibilties initially included setting up a cluster computing system for the mechanical
-                                    team, configuring version control systems across PrISUm's computers, standardizing software configurations, and deploying a new version of the team server. I am not planning on attending PrISUm meeetings for the Fall
-                                    2016 semester so as to better focus on my career search.</p>
+                                    team, configuring version control systems across PrISUm's computers, standardizing software configurations, and deploying a new version of the team server. I ended my PrISUm membership Fall 2016 so as to better focus
+                                    on my internship search.</p>
                             </div>
                             <div class="card-action">
                                 <a href="http://www.prisum.iastate.edu/"><span class="purple-text lighten-4">Club Website</span></a>
@@ -209,7 +212,7 @@
                             <div class="card-content">
                                 <span class="card-title">Computer Science and Software Engineering Club</span>
                                 <p>As part of my internship at Clearwater Analytics, I had the pleasure of having an Officer of CSE as my roommate. CSE is at a transformative state in its History. Over the summer, I was informed about CSE descisions as they
-                                    occured. As of Fall 2016, I have been regularly attending CSE meetings. There has been a big push towards career prepardness. As I am in the process of finding a career, I have been involved heavily in this area.</p>
+                                    occured.I attended CSE meetings during the fall semester of my final year at Iowa State. There has been a big push towards career prepardness. However, my attendance tapered off once I lined up a job after graduation</p>
                             </div>
                             <div class="card-action">
                                 <a href="http://club.cs.iastate.edu/"><span class="purple-text lighten-4">Club Website</span></a>
@@ -222,7 +225,7 @@
                             <div class="card-content">
                                 <span class="card-title">History Club</span>
                                 <p>Iowa State History Club is a student organization dedicated to the discussion and promotion of history among the greater Iowa State University community. While the president does have to be a history major, all majors are
-                                    welcome and encouraged to join. As an officer of History Club, I am in charge of designing the format of each meeting, as well as working with similar clubs and organizations to plan events together.</p>
+                                    welcome and encouraged to join. As an officer of History Club, I was in charge of designing the format of each meeting, as well as working with similar clubs and organizations to plan events together.</p>
                             </div>
                             <div class="card-action">
                                 <a href="https://www.stuorg.iastate.edu/site/historyclub"><span class="purple-text lighten-4">Club Website</span></a>
@@ -688,7 +691,6 @@
                         </a>.</p>
                 </div>
                 <div class="col l4 offset-12 s12">
-                    <h5 class="white-text">External Links</h5>
                     <ul>
                         <script src="https://platform.linkedin.com/in.js" type="text/javascript"></script>
                         <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/michaelarassilacs" data-format="inline" data-related="false"></script>
@@ -698,7 +700,7 @@
         </div>
         <div class="footer-copyright">
             <div class="container">
-                <span class="grey-text text-lighten-2">Spring 2017</span>
+                <span class="grey-text text-lighten-2">Fall 2017</span>
             </div>
         </div>
     </footer>
