--- a/work.html
+++ b/work.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
+    <title>Work - Michael Sila</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css" media="screen,projection">
     <link rel=stylesheet href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,6 +12,7 @@
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
     <script src="javas.js"></script>
+    <link rel="icon" href="images/page-icons/ic_work_black_24dp_1x.png">
 
 
 </head>
@@ -42,7 +43,7 @@
         <div class="page-body">
             <div class="sub_section section">
                 <div class="blue sub-header">
-                    <span class="white-text date-range">July 2016 - Present</span>
+                    <span class="white-text date-range">July 2017 - Present</span>
                     <h3 class="center white-text">Clearwater Analytics</h3>
                 </div>
                 <div class="container row">
@@ -57,7 +58,9 @@
                             by team, popular frameworks include: Java 8, Jersey 1 & 2, Microsoft SQL Server, Angular JS 1 and 2, JQuery, MongoDB, and a plethora of other technologies.
                         </p>
                         <p>
-                            I am starting work at Clearwater full time with the title of <b>Software Engineer</b> on July 10th, 2016. Wish me luck!
+                            I currently work at Clearwater with the title of <b>Software Engineer</b> on the Integration and Productivity team. Our team is responsible for a number of internal tools and frameworks used to faciliate the development process.
+                            This includes everything from small libraries to large, full stack, applications. The IP team is also a testbed for improvements to the development proccess. This also ranges from benign items, such as an automatic code formatter
+                            that runs at compile time, to more advanced methodologies such as integration test frameworks, new build systems, and a plethora of other possible improvements.
                         </p>
                     </div>
                 </div>
@@ -223,7 +226,6 @@
                         </a>.</p>
                 </div>
                 <div class="col l4 offset-12 s12">
-                    <h5 class="white-text">External Links</h5>
                     <ul>
                         <script src="https://platform.linkedin.com/in.js" type="text/javascript"></script>
                         <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/michaelarassilacs" data-format="inline" data-related="false"></script>
