Added profile picture

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </header>
     <main>
         <div class="index-body">
-            <img src="https://static.pexels.com/photos/213117/pexels-photo-213117.jpeg" class="circle responsive-img">
+            <img src="images/profile.jpg" class="circle responsive-img" style="display: block;margin:auto;">
             <div class="index-text">
                 <p>I am currently a Software Engineer for Clearwater Analytics in Boise, Idaho. I work on the Integration and Productivity team developing and maintaining internal tools used to facilitate production. </p>
                 <p>I also work on various projects in my spare time, which are available on my GitHub. These projects are primarily used as a vehicle to expand my knowledge and supplement my experience at Clearwater.</p>
